--- a/Class_04_20220523/cv.css
+++ b/Class_04_20220523/cv.css
@@ -3,9 +3,19 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+table.me {
+background-color: rgba(125, 127, 245, 0.836);
+border-style: outset;
+border-radius: 15px;
+padding: 5px;
+}
+table.pro {
+    width: 800px
+    
+}
 td.mazie {
     font-family: Times, serif;
-    font-size: 10px;
+    font-size: 11px;
     background-color: rgba(146, 145, 145, 0.548);
 }
 td.Name {
@@ -22,7 +32,15 @@ td.school {
     background-color: rgba(146, 145, 145, 0.548);
     width: 200px
 }
+td.line {
+    border-style: inset;
+    height: 1px;
+}
+td.kontakti {
+    text-align: center;
+}
 th {
     text-align: left;
     font-size: 15px;
+    
 }
