papildināju MD ar klienta ievadi/ css labojums

--- a/Class_10_20220615/Majasdarbs banka/style.css
+++ b/Class_10_20220615/Majasdarbs banka/style.css
@@ -10,14 +10,10 @@
     padding: 25px;
     border: 2px solid black;
     width: 400px;
-    height: 400px;
+    height: auto;
     text-align: left
 }
 
 hr {
     border: none;
-}
-p.1{
-    padding-bottom: 1pxpx;
-    
 }
